--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -8,11 +8,15 @@
 <body>
     <h1>User情報管理システム</h1>
     <h2>User一覧（全件）</h2>
+    <form method="post" th:action="@{/logout}">
+        <input type="submit" value="ログアウト">
+    </form><br>
     <form name="frm" method="post" th:action="@{/user/list}">
-    　　　　<a th:href="@{/user/register}">Userの登録</a>
-    　　　　<input type="submit" name="deleteRun" id="deleteRun" value="(選択)したUserを一括削除">
-         <table>
-             <tr>
+        <a th:href="@{/user/register}">Userの登録</a>
+        <input type="submit" name="deleteRun" id="deleteRun"value="(選択)したUserを一括削除">
+        <br><br>
+        <table>
+            <tr>
                  <th class="center">(選択)</th>
                  <th>ID</th>
                  <th>名前</th>
@@ -30,8 +34,8 @@
                  <td th:text="${user.email}"></td>
                  <td><a th:href="@{/user/update/{id}/(id=${user.id})}">更新</a></td>
              </tr>
-          </table>
-      </form>
-      <script th:src="@{/js/user/list.js}"></script>
+         </table>
+     </form>
+     <script th:src="@{/js/user/list.js}"></script>
 </body>
 </html>
