--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -13,8 +13,10 @@
         <input type="text" th:field="*{name}" th:errorclass="err">
         <span th:errors="*{name}" class="err"></span>
         <br>
+
+
         <label for="gender">性別</label>
-        <select th:field="*{gender}">
+        <select th:field="*{gender}" th:errorclass="err">
             <option value="" th:text="選択してください" th:selected="${user.gender == ''}">
             <option
                 th:each="item:${T(com.techacademy.entity.User.Gender).values()}"
